--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -128,6 +128,7 @@ img {
 }
 
 .header-item-link {
+    position: relative;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -136,21 +137,30 @@ img {
     padding-top: 32px;
     padding-bottom: 32px;
 
+
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-item-link::after{
+.header-item-link.current::after{
     content: "";
     position: absolute;
     display: block;
     width: 100%;
     height: 4px;
-    color: #2196F3;
-    border-radius: 2px
+    bottom: 0;
+    background-color: #2196F3;
+    border-radius: 2px;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+
+.header-item-link:hover::after {
+    opacity: 1;
+}
+
 
 .icon-envelop,
 .icon-smartphone {
