--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,6 @@ color: var(--second-title-color);
 
 .header-list {
     display: flex;
-    margin-left: auto;
     align-items: center;
 }
 
@@ -119,7 +118,7 @@ color: var(--second-title-color);
 }
 
 .header-item-link {
-position: ralative;
+position: relative;
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -134,15 +133,25 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.header-item-link::after {
-content: "";
-position: absolute;
-display: block;
-width: 100%;
-height: 4px;
-color: #2196F3;
-border-radius: 2px;
+.header-item-link.current::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #2196F3;
+    bottom: 0;
+    border-radius: 2px;
+    opacity: 0;
 
+    transition-property: opacity, color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ 
+}
+
+.header-item-link:hover::after{
+    opacity: 1;
 }
 
 .header-item-link:hover,
@@ -390,10 +399,7 @@ img {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-
 }
-
-
 
 .gallery-list {
     display: flex;
@@ -401,9 +407,6 @@ img {
     margin-left: auto;
 
 }
-
-
-
 
 /*--Team--*/
 
@@ -663,7 +666,7 @@ letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 margin-bottom: 9px;
 
-transition-property: background-color;
+transition-property: color;
 transition-duration: 250ms;
 transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
